[tool.poetry]
name = "python-devcontainer"
version = "0.1.0"
description = ""
authors = ["Bob"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry-dynamic-versioning]
vcs = "git"
format-jinja = "v{% if distance == 0 %}{{ base }}{% else %}{{ base }}+b{{ branch_escaped }}.{{ distance }}.{{ commit }}{% endif %}"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning", "wheel"]
build-backend = "poetry_dynamic_versioning.backend"
